# glint

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md
.github/: RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md
.github/workflows/: autotag-glint_audio.yml  ci.yml  mobile.yml  notify-crispasr.yml  publish-glint_audio.yml  publish-glint_audio_pure.yml  release.yml
bindings/dart/: CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/.dart_tool/: package_config.json  package_graph.json
bindings/dart/example/: buckets_ab.dart  decoder_roundtrip.dart  example.dart  opus_roundtrip.dart  vorbis_decode.dart
bindings/dart/lib/: glint.dart  glint_audio.dart
bindings/dart_pure/: CHANGELOG.md  README.md  pubspec.yaml
bindings/dart_pure/example/: glint_audio_pure_example.dart
bindings/dart_pure/lib/: glint_audio_pure.dart
bindings/dart_pure/lib/src/: mp3_decoder.dart  mp3_encoder.dart  mp3_frame.dart  mp3_granule.dart  mp3_huffman.dart  mp3_huffman_tables.dart  mp3_mdct.dart  mp3_psycho.dart  mp3_shape.dart  mp3_short.dart  mp3_subband.dart  mp3_window.dart  wav_io.dart
bindings/dart_pure/test/: mp3_decode_roundtrip_test.dart  mp3_decoder_fuzz_test.dart  mp3_decoder_test.dart  mp3_encoder_test.dart  mp3_golden_test.dart  mp3_granule_test.dart  mp3_huffman_test.dart  mp3_shape_test.dart  mp3_short_encode_test.dart
bindings/python/: example.py  glint.py  pyproject.toml  test_bindings.py
bindings/rust/glint/: Cargo.toml
bindings/rust/glint-sys/: Cargo.toml  build.rs
bindings/rust/glint-sys/src/: lib.rs
bindings/rust/glint/src/: lib.rs
bindings/rust/glint/tests/: basic.rs
bindings/wasm/: build.sh  glint.mjs  glint.wasm  glint_codec.mjs  test.mjs
build-b/: CMakeCache.txt  Makefile  cmake_install.cmake  glint_cli
build-d/: CMakeCache.txt  Makefile  cmake_install.cmake  glint_cli
build-f/: CMakeCache.txt  Makefile  cmake_install.cmake  glint_cli
cli/: audio_io.hpp  main.cpp
embedded/: README.md
embedded/bench/: bench_core.c
embedded/pico/: CMakeLists.txt  main.c
embedded/qemu/: .gitignore  build_and_run.sh  glue.c  mps2.ld  startup.c
esp-idf/: CMakeLists.txt  README.md  idf_component.yml
esp-idf/example/: CMakeLists.txt
esp-idf/example/main/: CMakeLists.txt  bench_main.c
include/glint/: glint.h
packaging/vcpkg/: portfile.cmake  vcpkg.json
src/: aac_coder.cpp  aac_decoder.cpp  aac_decoder.hpp  aac_encoder.cpp  bitstream.hpp  decode_audio_c_api.cpp  decoder_c_api.cpp  encode_audio_c_api.cpp  encoder.cpp  encoder.hpp  fixedpoint.hpp  flac_decoder.cpp  flac_decoder.hpp  huffman.cpp  huffman.hpp  mdct.cpp  mdct.hpp  mp3_decoder.cpp  mp3_decoder.hpp  opus_analysis.cpp  opus_analysis.hpp  opus_c_api.cpp  opus_celt_bands.cpp  opus_celt_bands.hpp  opus_celt_decoder.cpp  opus_celt_decoder.hpp  opus_celt_enc_bands.cpp  opus_celt_enc_bands.hpp  opus_celt_enc_energy.cpp  opus_celt_enc_energy.hpp  opus_celt_enc_vq.cpp  opus_celt_enc_vq.hpp  opus_celt_encoder.cpp  opus_celt_encoder.hpp  opus_celt_energy.cpp  opus_celt_energy.hpp  opus_celt_pitch.cpp  opus_celt_pitch.hpp  opus_celt_rate.cpp  opus_celt_rate.hpp  (+53 more)
tests/: aac_league_2026-07-06.txt  aac_league_v0.8.txt  ab_benchmark.py  abx.py  benchmark_encoder.py  compare_encoders.py  gen_castanet.py  gen_torture.py  measure_audio.py  opus_league_2026-07-10.txt  opus_league_2026-07-11.txt  quality_baselines.json  test_aac.py  test_asr.py  test_quality.py  test_unit.cpp  vorbis_test_stream.h
tools/: aac_dec_cli.cpp  check_nofpu.sh  crosscheck_opus_alloc.py  crosscheck_opus_bands.py  crosscheck_opus_celt_dec.py  crosscheck_opus_celt_prims.py  crosscheck_opus_ec.py  crosscheck_opus_enc_energy.py  crosscheck_opus_enc_vq.py  crosscheck_opus_energy.py  crosscheck_opus_fec.py  crosscheck_opus_mdct.py  crosscheck_opus_ms.py  crosscheck_opus_rates.py  crosscheck_opus_silk_dec.py  crosscheck_opus_silk_exc.py  crosscheck_opus_silk_frame.py  crosscheck_opus_silk_indices.py  crosscheck_opus_silk_math.py  crosscheck_opus_silk_nlsf.py  crosscheck_opus_silk_resampler.py  crosscheck_opus_silk_stereo.py  fuzz_container.cpp  fuzz_decoders.cpp  fuzz_opus_decoder.cpp  fuzz_vorbis.cpp  gen_aac_tables.py  gen_mp3_intensity.py  gen_opus_celt_tables.py  gen_opus_silk_tables.py  mp3_dec_cli.cpp  opus_alloc_crosscheck.cpp  opus_bands_crosscheck.cpp  opus_celt_dec_crosscheck.cpp  opus_celt_prims_crosscheck.cpp  opus_dec_cli.cpp  opus_ec_crosscheck.cpp  opus_enc_cli.cpp  opus_enc_energy_crosscheck.cpp  opus_enc_vq_crosscheck.cpp  (+26 more)
