[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "glint-mp3"
version = "0.3.0"
description = "Fast MP3 encoder — Python bindings for glint"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
py-modules = ["glint"]

[tool.setuptools.package-dir]
"" = "."
