[package]
name = "glint-mp3"
version = "0.3.0"
edition = "2021"
description = "Fast, lightweight MP3 encoder — safe Rust wrapper"
license = "MIT"
repository = "https://github.com/CrispStrobe/glint"
keywords = ["mp3", "audio", "encoder", "codec"]
categories = ["multimedia::audio", "multimedia::encoding"]

[lib]
name = "glint"

[dependencies]
glint-sys = { path = "../glint-sys" }
